# SO_2025

Lab1/: lab1.c
Lab10/: data.out  mmap1  mmap1.c  mmap2  mmap2.c  mmap4  mmap4.c  myHead  myHead.c  myTr  myTr.c
Lab12/: after_exec  after_exec.c  before_exec  before_exec.c  com-0  com-0.c  com-2  exec_cut  exec_ls_rm  exec_ls_rm.c  exec_rec  exec_rec.c  myCall_System.c  redirect  redirect.c
Lab13/: fifo_retention_test.c  mkfifo_ex.c  pipe_commands1.c  pipe_commands2.c  pipe_commands3.c  pipe_ex1.c  pipe_ex2.c
Lab3/: file_permisions.sh  output.txt  script.sh  some_permisons.sh
Lab4/: consumer.sh  producer.sh  script.sh
Lab5/: ExLab1.sh  cscript  script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh
Lab9/: signal_processing.c
TP2/: input_data.txt  supervisor.c  worker1.c  worker2+3.c
examen_partial/: automatizare.sh  script.c
lab11/: cerinta.txt  cut  exec_cut.c  fork_ex  fork_ex.c  info_ex  info_ex.c  signal_proc2  signal_proc2.c  tree_of_proceses  tree_of_proceses.c  wait_ex1  wait_ex1.c
lab6/: datafile.txt  myFind  myFind.c  myHead  myHead.c  myTr_filter  myTr_filter.c  my_ls  my_ls.c  script1_POSIX  script1_POSIX.c  script2_lseek  script2_lseek.c  script3_lseek  script3_lseek.c  script_ascii  script_ascii.c  test_output.txt
lab7/: acces_v3.c  data.txt  peco  peco.c  script1.c  script1_lock  script1_lock.c  script_prototype.c  text_to_bin.c
